完成了(1)-(4)的内容，修改了bib文件中的reference

--- a/main.bib
+++ b/main.bib
@@ -1,368 +1,334 @@
-@book{nesterov2013introductory,
-	title={Introductory lectures on convex optimization: A basic course},
-	author={Nesterov, Yurii},
-	volume={87},
-	year={2013},
-	publisher={Springer Science \& Business Media}
+@book{ben-tal2001lectures,
+  title={Lectures on Modern Convex Optimization: Analysis, Algorithms, and Engineering Applications},
+  author={Ben-Tal, A. and Nemirovski, A.},
+  series={MPS/SIAM Series on Optimization},
+  publisher={SIAM},
+  address={Philadelphia},
+  year={2001}
 }
 
-@inproceedings{defazio2016simple,
-	title={A simple practical accelerated method for finite sums},
-	author={Defazio, Aaron},
-	booktitle={Advances in Neural Information Processing Systems},
-	pages={676--684},
-	year={2016}
+@book{bertsekas1999nonlinear,
+  title={Nonlinear Programming},
+  author={Bertsekas, D. P.},
+  edition={2nd},
+  publisher={Athena Scientific},
+  address={Belmont, MA},
+  year={1999}
 }
 
-@article{schmidt2017minimizing,
-	title={Minimizing finite sums with the stochastic average gradient},
-	author={Schmidt, Mark and Le Roux, Nicolas and Bach, Francis},
-	journal={Mathematical Programming},
-	volume={162},
-	number={1-2},
-	pages={83--112},
-	year={2017},
-	publisher={Springer}
-}
-
-@article{necoara2017random,
-	title={Random block coordinate descent methods for linearly constrained optimization over networks},
-	author={Necoara, Ion and Nesterov, Yurii and Glineur, Fran{\c{c}}ois},
-	journal={Journal of Optimization Theory and Applications},
-	volume={173},
-	number={1},
-	pages={227--254},
-	year={2017},
-	publisher={Springer}
-}
-
-@phdthesis{johansson2008distributed,
-	title={On distributed optimization in networked systems},
-	author={Johansson, Bj{\"o}rn},
-	year={2008},
-	school={KTH}
-}
-
-@article{bazerque2010distributed,
-	title={Distributed spectrum sensing for cognitive radio networks by exploiting sparsity},
-	author={Bazerque, Juan Andr{\'e}s and Giannakis, Georgios B},
-	journal={IEEE Transactions on Signal Processing},
-	volume={58},
-	number={3},
-	pages={1847--1862},
-	year={2010},
-	publisher={IEEE}
-}
-
-@article{forero2010consensus,
-	title={Consensus-based distributed support vector machines},
-	author={Forero, Pedro A and Cano, Alfonso and Giannakis, Georgios B},
-	journal={Journal of Machine Learning Research},
-	volume={11},
-	number={May},
-	pages={1663--1707},
-	year={2010}
-}
-
-
-
-@article{nedic2009distributed,
-	title={Distributed subgradient methods for multi-agent optimization},
-	author={Nedic, Angelia and Ozdaglar, Asuman},
-	journal={IEEE Transactions on Automatic Control},
-	volume={54},
-	number={1},
-	pages={48--61},
-	year={2009},
-	publisher={IEEE}
-}
-
-@article{shi2015extra,
-	title={Extra: An exact first-order algorithm for decentralized consensus optimization},
-	author={Shi, Wei and Ling, Qing and Wu, Gang and Yin, Wotao},
-	journal={SIAM Journal on Optimization},
-	volume={25},
-	number={2},
-	pages={944--966},
-	year={2015},
-	publisher={SIAM}
-}
-
-@article{davis2015convergence,
-	title={Convergence rate analysis of primal-dual splitting schemes},
-	author={Davis, Damek},
-	journal={SIAM Journal on Optimization},
-	volume={25},
-	number={3},
-	pages={1912--1943},
-	year={2015},
-	publisher={SIAM}
-}
-
-@article{mokhtari2016dsa,
-	title={{DSA}: {Decentralized} double stochastic averaging gradient algorithm},
-	author={Mokhtari, Aryan and Ribeiro, Alejandro},
-	journal={Journal of Machine Learning Research},
-	volume={17},
-	number={61},
-	pages={1--35},
-	year={2016}
-}
-
-@article{yuan2016convergence,
-	title={On the convergence of decentralized gradient descent},
-	author={Yuan, Kun and Ling, Qing and Yin, Wotao},
-	journal={SIAM Journal on Optimization},
-	volume={26},
-	number={3},
-	pages={1835--1854},
-	year={2016},
-	publisher={SIAM}
-}
-
-@article{shi2014linear,
-	title={On the Linear Convergence of the ADMM in Decentralized Consensus Optimization.},
-	author={Shi, Wei and Ling, Qing and Yuan, Kun and Wu, Gang and Yin, Wotao},
-	journal={IEEE Trans. Signal Processing},
-	volume={62},
-	number={7},
-	pages={1750--1761},
-	year={2014}
-}
-
-@book{bullo2009distributed,
-  title={Distributed control of robotic networks: a mathematical approach to motion coordination algorithms},
-  author={Bullo, Francesco and Cortes, Jorge and Martinez, Sonia},
-  year={2009},
-  publisher={Princeton University Press}
-}
-
-@article{ribeiro2010ergodic,
-  title={Ergodic stochastic optimization algorithms for wireless communication and networking},
-  author={Ribeiro, Alejandro},
-  journal={IEEE Transactions on Signal Processing},
-  volume={58},
+@article{bioucas-dias2007new,
+  title={A new TwIST: Two-step iterative shrinkage/thresholding algorithms for image restoration},
+  author={Bioucas-Dias, J. and Figueiredo, M.},
+  journal={IEEE Transactions on Image Processing},
+  volume={16},
   number={12},
-  pages={6369--6386},
-  year={2010},
-  publisher={IEEE}
+  pages={2992--3004},
+  year={2007}
 }
 
-@article{mokhtari2017network,
-  title={Network {Newton} distributed optimization methods},
-  author={Mokhtari, Aryan and Ling, Qing and Ribeiro, Alejandro},
-  journal={IEEE Transactions on Signal Processing},
-  volume={65},
+@book{bjorck1996numerical,
+  title={Numerical Methods for Least Squares Problems},
+  author={Bjorck, A.},
+  publisher={SIAM},
+  address={Philadelphia},
+  year={1996}
+}
+
+@techreport{bredies2008iterative,
+  title={Iterative Soft-Thresholding Converges Linearly},
+  author={Bredies, K. and Lorenz, D.},
+  year={2008},
+  note={Available online at \url{http://arxiv.org/abs/0709.1598v3}}
+}
+
+@article{bruck1977weak,
+  title={On the weak convergence of an ergodic iteration for the solution of variational inequalities for monotone operators in Hilbert space},
+  author={Bruck, R. J.},
+  journal={Journal of Mathematical Analysis and Applications},
+  volume={61},
   number={1},
-  pages={146--161},
-  year={2017},
-  publisher={IEEE}
+  pages={159--164},
+  year={1977}
 }
 
-@article{eisen2017decentralized,
-  title={Decentralized quasi-{Newton} methods},
-  author={Eisen, Mark and Mokhtari, Aryan and Ribeiro, Alejandro},
-  journal={IEEE Transactions on Signal Processing},
-  volume={65},
-  number={10},
-  pages={2613--2628},
-  year={2017},
-  publisher={IEEE}
+@article{chambolle1998nonlinear,
+  title={Nonlinear wavelet image processing: Variational problems, compression, and noise removal through wavelet shrinkage},
+  author={Chambolle, A. and DeVore, R. A. and Lee, N. Y. and Lucier, B. J.},
+  journal={IEEE Transactions on Image Processing},
+  volume={7},
+  number={3},
+  pages={319--335},
+  year={1998}
 }
 
-@article{ling2015dlm,
-	title={{DLM}: {Decentralized} linearized alternating direction method of multipliers},
-	author={Ling, Qing and Shi, Wei and Wu, Gang and Ribeiro, Alejandro},
-	journal={IEEE Transactions on Signal Processing},
-	volume={63},
-	number={15},
-	pages={4051--4064},
-	year={2015},
-	publisher={IEEE}
+@article{chen1998atomic,
+  title={Atomic decomposition by basis pursuit},
+  author={Chen, S. S. and Donoho, D. L. and Saunders, M. A.},
+  journal={SIAM Journal on Scientific Computing},
+  volume={20},
+  number={1},
+  pages={33--61},
+  year={1998}
 }
 
-@article{mokhtari2015decentralized,
-  title={{DQM}: {Decentralized} Quadratically Approximated Alternating Direction Method of Multipliers},
-  author={Mokhtari, Aryan and Shi, Wei and Ling, Qing and Ribeiro, Alejandro},
-  journal={IEEE Transactions on Signal Processing},
-  volume={64},
-  number={19},
-  pages={5158--5173},
-  year= {2016},
+@article{combettes2005signal,
+  title={Signal recovery by proximal forward-backward splitting},
+  author={Combettes, P. L. and Wajs, V. R.},
+  journal={Multiscale Modeling \& Simulation},
+  volume={4},
+  number={4},
+  pages={1168--1200},
+  year={2005}
 }
 
-@article{duchi2012dual,
-	title={Dual averaging for distributed optimization: Convergence analysis and network scaling},
-	author={Duchi, John C and Agarwal, Alekh and Wainwright, Martin J},
-	journal={IEEE Transactions on Automatic control},
-	volume={57},
-	number={3},
-	pages={592--606},
-	year={2012},
-	publisher={IEEE}
+@article{daubechies2004iterative,
+  title={An iterative thresholding algorithm for linear inverse problems with a sparsity constraint},
+  author={Daubechies, I. and Defrise, M. and De Mol, C.},
+  journal={Communications on Pure and Applied Mathematics},
+  volume={57},
+  number={11},
+  pages={1413--1457},
+  year={2004}
 }
 
-@inproceedings{scaman2017optimal,
-	title={Optimal Algorithms for Smooth and Strongly Convex Distributed Optimization in Networks},
-	author={Scaman, Kevin and Bach, Francis and Bubeck, S{\'e}bastien and Lee, Yin Tat and Massouli{\'e}, Laurent},
-	booktitle={International Conference on Machine Learning},
-	pages={3027--3036},
-	year={2017}
+@article{donoho1995adapting,
+  title={Adapting to unknown smoothness via wavelet shrinkage},
+  author={Donoho, D. L. and Johnstone, I. M.},
+  journal={Journal of the American Statistical Association},
+  volume={90},
+  number={432},
+  pages={1200--1224},
+  year={1995}
 }
 
-@inproceedings{ying2016stochastic,
-	title={Stochastic online AUC maximization},
-	author={Ying, Yiming and Wen, Longyin and Lyu, Siwei},
-	booktitle={Advances in neural information processing systems},
-	pages={451--459},
-	year={2016}
+@article{elad2007subspace,
+  title={Subspace optimization methods for linear least squares with non-quadratic regularization},
+  author={Elad, M. and Matalon, B. and Zibulevsky, M.},
+  journal={Applied and Computational Harmonic Analysis},
+  volume={23},
+  number={3},
+  pages={346--367},
+  year={2007}
 }
 
-@book{bauschke2017convex,
-	title={Convex analysis and monotone operator theory in Hilbert spaces},
-	author={Bauschke, Heinz H and Combettes, Patrick L and others},
-	volume={2011},
-	year={2017},
-	publisher={Springer}
+@book{engl1996regularization,
+  title={Regularization of Inverse Problems},
+  author={Engl, H. W. and Hanke, M. and Neubauer, A.},
+  volume={375},
+  series={Mathematics and Its Applications},
+  publisher={Kluwer Academic Publishers},
+  address={Dordrecht, The Netherlands},
+  year={1996}
 }
 
-@article{rockafellar1970monotone,
-	title={Monotone operators associated with saddle-functions and minimax problems},
-	author={Rockafellar, R Tyrrell},
-	journal={Nonlinear functional analysis},
-	volume={18},
-	number={part 1},
-	pages={397--407},
-	year={1970},
-	publisher={Proceedings of Symposia in Pure Mathematics, American Mathematical Society}
+@book{facchinei2003finite,
+  title={Finite-Dimensional Variational Inequalities and Complementarity Problems},
+  author={Facchinei, F. and Pang, J.-S.},
+  volume={II},
+  series={Springer Series in Operations Research},
+  publisher={Springer-Verlag},
+  address={New York},
+  year={2003}
 }
 
-@article{rockafellar1970maximal,
-	title={On the maximal monotonicity of subdifferential mappings},
-	author={Rockafellar, RT and others},
-	journal={Pacific J. Math},
-	volume={33},
-	number={1},
-	pages={209--216},
-	year={1970}
+@article{figueiredo2003em,
+  title={An EM algorithm for wavelet-based image restoration},
+  author={Figueiredo, M. A. T. and Nowak, R. D.},
+  journal={IEEE Transactions on Image Processing},
+  volume={12},
+  number={8},
+  pages={906--916},
+  year={2003}
 }
 
-@inproceedings{wu2016decentralized,
-	title={Decentralized consensus optimization with asynchrony and delays},
-	author={Wu, Tianyu and Yuan, Kun and Ling, Qing and Yin, Wotao and Sayed, Ali H},
-	booktitle={Signals, Systems and Computers, 2016 50th Asilomar Conference on},
-	pages={992--996},
-	year={2016},
-	organization={IEEE}
+@article{figueiredo2007gradient,
+  title={Gradient projection for sparse reconstruction: Application to compressed sensing and other inverse problems},
+  author={Figueiredo, M. A. T. and Nowak, R. D. and Wright, S. J.},
+  journal={IEEE Journal of Selected Topics in Signal Processing},
+  volume={1},
+  number={4},
+  pages={586--597},
+  year={2007}
 }
 
-@article{shi2015proximal,
-	title={A proximal gradient algorithm for decentralized composite optimization},
-	author={Shi, Wei and Ling, Qing and Wu, Gang and Yin, Wotao},
-	journal={IEEE Transactions on Signal Processing},
-	volume={63},
-	number={22},
-	pages={6013--6023},
-	year={2015},
-	publisher={IEEE}
+@article{golub1999tikhonov,
+  title={Tikhonov regularization and total least squares},
+  author={Golub, G. H. and Hansen, P. C. and O'Leary, D. P.},
+  journal={SIAM Journal on Matrix Analysis and Applications},
+  volume={21},
+  number={1},
+  pages={185--194},
+  year={1999}
 }
 
-@inproceedings{defazio2014saga,
-	title={SAGA: A fast incremental gradient method with support for non-strongly convex composite objectives},
-	author={Defazio, Aaron and Bach, Francis and Lacoste-Julien, Simon},
-	booktitle={Advances in neural information processing systems},
-	pages={1646--1654},
-	year={2014}
+@techreport{hale2007fixed,
+  title={A Fixed-Point Continuation Method for $l_1$-Regularized Minimization with Applications to Compressed Sensing},
+  author={Hale, E. and Yin, W. and Zhang, Y.},
+  institution={CAAM, Rice University},
+  address={Houston, TX},
+  year={2007},
+  type={Technical Report},
+  number={TR07-07}
 }
 
-@article{xiao2004fast,
-	title={Fast linear iterations for distributed averaging},
-	author={Xiao, Lin and Boyd, Stephen},
-	journal={Systems \& Control Letters},
-	volume={53},
-	number={1},
-	pages={65--78},
-	year={2004},
-	publisher={Elsevier}
+@article{hansen1993lcurve,
+  title={The use of the L-curve in the regularization of discrete ill-posed problems},
+  author={Hansen, P. C. and O'Leary, D. P.},
+  journal={SIAM Journal on Scientific Computing},
+  volume={14},
+  number={6},
+  pages={1487--1503},
+  year={1993}
 }
 
-@inproceedings{colin2016gossip,
-	title={Gossip dual averaging for decentralized optimization of pairwise functions},
-	author={Colin, Igor and Bellet, Aur{\'e}lien and Salmon, Joseph and Cl{\'e}men{\c{c}}on, St{\'e}phan},
-	booktitle={International Conference on Machine Learning},
-	pages={1388--1396},
-	year={2016}
+@article{hansen1994regularization,
+  title={Regularization tools: A MATLAB package for analysis and solution of discrete ill-posed problems},
+  author={Hansen, P. C.},
+  journal={Numerical Algorithms},
+  volume={6},
+  number={1},
+  pages={1--35},
+  year={1994}
 }
 
-@inproceedings{gao2013one,
-	title={One-pass AUC optimization},
-	author={Gao, Wei and Jin, Rong and Zhu, Shenghuo and Zhou, Zhi-Hua},
-	booktitle={International Conference on Machine Learning},
-	pages={906--914},
-	year={2013}
+@book{hansen1997rank,
+  title={Rank-Deficient and Discrete Ill-Posed Problems: Numerical Aspects of Linear Inversion},
+  author={Hansen, P. C.},
+  publisher={SIAM},
+  address={Philadelphia},
+  year={1997}
 }
 
-@article{hanley1982meaning,
-	title={The meaning and use of the area under a receiver operating characteristic (ROC) curve.},
-	author={Hanley, James A and McNeil, Barbara J},
-	journal={Radiology},
-	volume={143},
-	number={1},
-	pages={29--36},
-	year={1982}
+@book{hansen2006deblurring,
+  title={Deblurring Images: Matrices, Spectra, and Filtering},
+  author={Hansen, P. C. and Nagy, J. G. and O'Leary, D. P.},
+  series={Fundamentals of Algorithms},
+  volume={3},
+  publisher={SIAM},
+  address={Philadelphia},
+  year={2006}
 }
 
-@inproceedings{johnson2013accelerating,
-	title={Accelerating stochastic gradient descent using predictive variance reduction},
-	author={Johnson, Rie and Zhang, Tong},
-	booktitle={Advances in neural information processing systems},
-	pages={315--323},
-	year={2013}
+@article{levitin1966constrained,
+  title={Constrained minimization methods},
+  author={Levitin, E. S. and Polyak, B. T.},
+  journal={USSR Computational Mathematics and Mathematical Physics},
+  volume={6},
+  number={5},
+  pages={1--50},
+  year={1966}
 }
 
-@InProceedings{pmlr-v54-leblond17a,
-	title = 	 {{ASAGA: Asynchronous Parallel SAGA}},
-	author = 	 {Rémi Leblond and Fabian Pedregosa and Simon Lacoste-Julien},
-	booktitle = 	 {Proceedings of the 20th International Conference on Artificial Intelligence and Statistics},
-	pages = 	 {46--54},
-	year = 	 {2017},
-	editor = 	 {Aarti Singh and Jerry Zhu},
-	volume = 	 {54},
-	series = 	 {Proceedings of Machine Learning Research},
-	address = 	 {Fort Lauderdale, FL, USA},
-	month = 	 {20--22 Apr},
-	publisher = 	 {PMLR},
-	pdf = 	 {http://proceedings.mlr.press/v54/leblond17a/leblond17a.pdf},
-	url = 	 {http://proceedings.mlr.press/v54/leblond17a.html},
-	abstract = 	 {We describe ASAGA, an asynchronous parallel version of the incremental gradient algorithm SAGA that enjoys fast linear convergence rates. Through a novel perspective, we revisit and clarify a subtle but important technical issue present in a large fraction of the recent convergence rate proofs for asynchronous parallel optimization algorithms, and propose a simplification of the recently introduced “perturbed iterate” framework that resolves it. We thereby prove that ASAGA can obtain a theoretical linear speedup on multi-core systems even without sparsity assumptions. We present results of an implementation on a 40-core architecture illustrating the practical speedup as well as the hardware overhead.}
+@article{martinet1970regularisation,
+  title={Régularisation d'inéquations variationnelles par approximations successives},
+  author={Martinet, B.},
+  journal={Revue Française d'Informatique et de Recherche Opérationnelle},
+  volume={4},
+  number={Sér. R-3},
+  pages={154--158},
+  year={1970}
 }
 
-@article{tsitsiklis1986distributed,
-	title={Distributed asynchronous deterministic and stochastic gradient optimization algorithms},
-	author={Tsitsiklis, John and Bertsekas, Dimitri and Athans, Michael},
-	journal={IEEE transactions on automatic control},
-	volume={31},
-	number={9},
-	pages={803--812},
-	year={1986},
-	publisher={IEEE}
+@article{moulin1999analysis,
+  title={Analysis of multiresolution image denoising schemes using generalized Gaussian and complexity priors},
+  author={Moulin, P. and Liu, J.},
+  journal={IEEE Transactions on Information Theory},
+  volume={45},
+  number={3},
+  pages={909--919},
+  year={1999}
 }
 
-@book{bertsekas1989parallel,
-	title={Parallel and distributed computation: numerical methods},
-	author={Bertsekas, Dimitri P and Tsitsiklis, John N},
-	volume={23},
-	year={1989},
-	publisher={Prentice hall Englewood Cliffs, NJ}
+@book{nemirovsky1983problem,
+  title={Problem Complexity and Method Efficiency in Optimization},
+  author={Nemirovsky, A. S. and Yudin, D. B.},
+  publisher={John Wiley \& Sons},
+  address={New York},
+  year={1983},
+  series={Wiley-Interscience Series in Discrete Mathematics}
 }
 
-@article{boyd2006randomized,
-	title={Randomized gossip algorithms},
-	author={Boyd, Stephen and Ghosh, Arpita and Prabhakar, Balaji and Shah, Devavrat},
-	journal={IEEE transactions on information theory},
-	volume={52},
-	number={6},
-	pages={2508--2530},
-	year={2006},
-	publisher={IEEE}
+@article{nesterov1983method,
+  title={A method for solving the convex programming problem with convergence rate $O(1/k^2)$},
+  author={Nesterov, Y. E.},
+  journal={Doklady Akademii Nauk SSSR},
+  volume={269},
+  number={3},
+  pages={543--547},
+  year={1983},
+  language={Russian}
+}
+
+@techreport{nesterov2007gradient,
+  title={Gradient Methods for Minimizing Composite Objective Function},
+  author={Nesterov, Y. E.},
+  institution={CORE},
+  year={2007},
+  note={Available at \url{http://www.eccc.be/DPs/dp_1191313936.pdf}}
+}
+
+@book{ortega2000iterative,
+  title={Iterative Solution of Nonlinear Equations in Several Variables},
+  author={Ortega, J. M. and Rheinboldt, W. C.},
+  series={Classics in Applied Mathematics},
+  volume={30},
+  publisher={SIAM},
+  address={Philadelphia},
+  year={2000}
+}
+
+@article{passty1979ergodic,
+  title={Ergodic convergence to a zero of the sum of monotone operators in Hilbert space},
+  author={Passty, G. B.},
+  journal={Journal of Mathematical Analysis and Applications},
+  volume={72},
+  number={2},
+  pages={383--390},
+  year={1979}
+}
+
+@book{polyak1987introduction,
+  title={Introduction to Optimization},
+  author={Polyak, B. T.},
+  series={Translations Series in Mathematics and Engineering},
+  publisher={Optimization Software},
+  address={New York},
+  year={1987}
+}
+
+@article{starck2003astronomical,
+  title={Astronomical image representation by the curvelet transform},
+  author={Starck, J. L. and Donoho, D. L. and Candès, E. J.},
+  journal={Astronomy \& Astrophysics},
+  volume={398},
+  number={3},
+  pages={785--800},
+  year={2003}
+}
+
+@book{tikhonov1977solution,
+  title={Solution of Ill-Posed Problems},
+  author={Tikhonov, A. N. and Arsenin, V. Y.},
+  publisher={V. H. Winston \& Sons},
+  address={Washington, DC},
+  year={1977}
+}
+
+@inproceedings{vonesch2007fast,
+  title={Fast iterative thresholding algorithm for wavelet-regularized deconvolution},
+  author={Vonesch, C. and Unser, M.},
+  booktitle={Proceedings of SPIE Optics and Photonics 2007 Conference on Mathematical Methods: Wavelet XII},
+  volume={6701},
+  pages={67010M},
+  year={2007},
+  organization={SPIE}
+}
+
+@inproceedings{wright2008sparse,
+  title={Sparse reconstruction by separable approximation},
+  author={Wright, S. J. and Nowak, R. D. and Figueiredo, M. A. T.},
+  booktitle={Proceedings of the IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={3373--3376},
+  year={2008},
+  organization={IEEE}
 }
