--- a/main.tex
+++ b/main.tex
@@ -36,12 +36,12 @@
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 \serialnum{2020-3-109315041}
 
-\rptname{Optimal Transport Based Distributed \gaplongcap Optimization Research}
+\rptname{Beck2009fast: A fast iterative shrinkage-thresholding algorithm for linear inverse problems}
 
 \rptauthora{李淳风}{109315041} %作者1和学号
 \rptauthorb{袁天罡}{109315042} %作者2和学号
-\rptauthorc{张三丰}{109315043} %作者3和学号
-\reporttime{2020}{12}
+
+\reporttime{2026}{1}
 
 % -------------------------------------------------
 % for english version.
@@ -65,32 +65,29 @@
 \renewcommand{\tablename}{Tab.~}
 \renewcommand{\refname}{Reference}
 % -------------------------------------------------
-
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 % Document.
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 \begin{document}
 \pagenumbering{gobble}
-
 %-----------------------------------------------------------------------------
 %  Title Page
 %-----------------------------------------------------------------------------
 \maketitle
-\thispagestyle{empty} \cleardoublepage
-
+\thispagestyle{empty} % \cleardoublepage
+\newpage
 %-----------------------------------------------------------------------------
 %  Table of Content
 %-----------------------------------------------------------------------------
-\rptcontent \thispagestyle{empty} \cleardoublepage
-
+\rptcontent \thispagestyle{empty} % \cleardoublepage
+\newpage
 %-----------------------------------------------------------------------------
 %  Abstract
 %-----------------------------------------------------------------------------
-\begin{abstract}\kaiti \xiaosi
-\lipsum[3]
-\end{abstract}
-\cleardoublepage
-
+% \begin{abstract}\kaiti \xiaosi
+% \lipsum[3]
+% \end{abstract}
+% \cleardoublepage
 %-----------------------------------------------------------------------------
 %  Sections
 %-----------------------------------------------------------------------------
@@ -98,7 +95,7 @@
 %-----------------------
 %
 %-----------------------
-\section{Introduction}
+\section{论文研究的问题背景}
 \lipsum[6]
 
 A popular family of optimization algorithms are so-called gradient descent algorithms: iterative algorithms that are com- prised of a gradient descent step at each iteration, followed by a projection step when there is a feasibility constraint. The purpose of the projection is to ensure that the update vector remains within the feasible set \cite{nesterov2013introductory}.
@@ -132,22 +129,6 @@ a = \sum_0^1 f(x,y).
 %-----------------------
 %
 %-----------------------
-\section{相关工作}\label{section:related}
-在相关工作以及其他任何章节，我们可以引用文献来说明相关的工作。
-
-{\color{blue}
-例如，我们可以如下撰写。
-在\citeyear{nesterov2013introductory}年，\citeauthor{nesterov2013introductory}撰写了关于凸优化基本原理的教材\cite{nesterov2013introductory}。此后，一种简单的有限和最小化问题的简单加速算法被提出\cite{defazio2016simple}，成为多种算法的基础\cite{eisen2017decentralized,davis2015convergence,colin2016gossip}。
-%
-由于算力的紧张，将优化计算分布在多个不同的计算节点上，成为优化领域的新方向。主要方法可以粗略地分为两条技术路线。第一条技术路线的代表性工作是DFISTA\cite{wu2016decentralized}...
-}
-
-\lipsum[6]
-
-%-----------------------
-%
-%-----------------------
-\section{问题描述和常用记号}\label{section:preliminary}
 本节主要描述处理的问题，并解释常用的记号。
 
 {\color{blue} 例如，分布式优化问题是一类重要的计算问题，在机器学习领域有大量的应用。分布式优化问题可以描述为如下形式。
@@ -162,7 +143,34 @@ a = \sum_0^1 f(x,y).
 %-----------------------
 %
 %-----------------------
-\section{方法描述}\label{section:methods}
+
+\section{论文的贡献}\label{section:contributions}
+
+
+\section{论文的章节组织}\label{section:structure}
+
+
+
+\section{论文的相关工作}\label{section:relation}
+
+在相关工作以及其他任何章节，我们可以引用文献来说明相关的工作。
+
+{\color{blue}
+例如，我们可以如下撰写。
+在\citeyear{nesterov2013introductory}年，\citeauthor{nesterov2013introductory}撰写了关于凸优化基本原理的教材\cite{nesterov2013introductory}。此后，一种简单的有限和最小化问题的简单加速算法被提出\cite{defazio2016simple}，成为多种算法的基础\cite{eisen2017decentralized,davis2015convergence,colin2016gossip}。
+%
+由于算力的紧张，将优化计算分布在多个不同的计算节点上，成为优化领域的新方向。主要方法可以粗略地分为两条技术路线。第一条技术路线的代表性工作是DFISTA\cite{wu2016decentralized}...
+}
+
+\lipsum[6]
+
+%-----------------------
+%
+%-----------------------
+
+\section{论文的技术方法}\label{section:theory}
+
+
 在本节中，算法可以表述如下算法~\ref{alg:thefirst}~所示。
 
 \begin{algorithm}[h]\xiaosi
@@ -199,7 +207,35 @@ a = \sum_0^1 f(x,y).
 %-----------------------
 %
 %-----------------------
-\section{理论结果}\label{section:theory}
+
+\section{论文的实验结果}
+请描述清楚实验的基本设置，例如：用何种数据集？参数是如何设定的？实验结果数据的来源（是自己做的实验还是引自他人的结果，如果是他人完成的实验，要注明参考文献）。建议要有实验的基本分析。实验的图的例子可参考图\ref{figure_LR_curves}。
+
+\lipsum[25-26]
+\begin{figure}[ht]
+	\begin{subfigure}{.48\textwidth}
+		\centering
+		\includegraphics[width=\linewidth]{figs/CIFAR11_adv_regret}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}{.48\textwidth}
+		\centering
+		\includegraphics[width=\linewidth]{figs/CIFAR11_adv_time}
+	\end{subfigure}
+	\caption[在线多分类Logistic回归任务的实验结果]{
+		在线多分类Logistic回归任务的实验结果。
+		左边曲线图的横轴表示轮数，纵轴表示平均的损失函数值。
+		右边的柱状图展示了每个算法平均每轮的计算时间。
+	}
+	\label{figure_LR_curves}
+\end{figure}
+\lipsum[27]
+
+%-----------------------
+%
+%-----------------------
+\section{论文的结论}
+
 \lipsum[16]
 \begin{defn2}[规范数]\label{defn:theone}
 如果$x \in (0,1)$，则称$x$为规范数。
@@ -244,7 +280,12 @@ $f(x)$是单调函数。
 %-----------------------
 %
 %-----------------------
-\section{应用意义}\label{section:application}
+\section{论文存在的问题}\label{section:problem}
+
+
+
+
+\section{围绕这篇论文可以开展哪些可行的研究}\label{section:application}
 阐述上述理论有哪些应用，可以列举使用了上述理论的论文、专利、软硬件产品等。
 
 \lipsum[16-24]
@@ -252,33 +293,9 @@ $f(x)$是单调函数。
 %-----------------------
 %
 %-----------------------
-\section{实验}\label{section:experiment}
-请描述清楚实验的基本设置，例如：用何种数据集？参数是如何设定的？实验结果数据的来源（是自己做的实验还是引自他人的结果，如果是他人完成的实验，要注明参考文献）。建议要有实验的基本分析。实验的图的例子可参考图\ref{figure_LR_curves}。
 
-\lipsum[25-26]
-\begin{figure}[ht]
-	\begin{subfigure}{.48\textwidth}
-		\centering
-		\includegraphics[width=\linewidth]{figs/CIFAR11_adv_regret}
-	\end{subfigure}
-	\hfill
-	\begin{subfigure}{.48\textwidth}
-		\centering
-		\includegraphics[width=\linewidth]{figs/CIFAR11_adv_time}
-	\end{subfigure}
-	\caption[在线多分类Logistic回归任务的实验结果]{
-		在线多分类Logistic回归任务的实验结果。
-		左边曲线图的横轴表示轮数，纵轴表示平均的损失函数值。
-		右边的柱状图展示了每个算法平均每轮的计算时间。
-	}
-	\label{figure_LR_curves}
-\end{figure}
-\lipsum[27]
 
-%-----------------------
-%
-%-----------------------
-\section{总结}\label{section:conclusion}
+
 \lipsum[28]
 
 
