--- a/main.tex
+++ b/main.tex
@@ -38,7 +38,7 @@
 
 \rptname{Beck2009fast: A fast iterative shrinkage-thresholding algorithm for linear inverse problems}
 
-\rptauthora{李文耀}{323101xxxx} %作者1和学号
+\rptauthora{李文耀}{3231012302} %作者1和学号
 \rptauthorb{施兴睿}{3230102392} %作者2和学号
 % \rptauthorc{张三丰}{109315043} %作者3和学号
 \reporttime{2025}{12}
@@ -98,9 +98,9 @@
 %-----------------------
 %
 %-----------------------
-\section{Introduction}
+\section{论文概述}
 
-\subsection{Problem Background}
+\subsection{论文研究的问题背景}
 
 线性逆问题广泛存在于天体物理学、信号与图像处理、统计推断和光学等多个学科领域，其核心任务是从受噪声污染的观测数据中恢复原始信号或图像。在这类问题中，观测数据通常可建模为一个离散线性系统
 $$
@@ -128,12 +128,12 @@ $$
 
 然而尽管 ISTA 结构简单、易于实现，但其收敛速度较慢，通常仅具有 $O(1/k)$ 的次线性全局收敛速率，这在处理大规模实际问题时效率较低。在本篇论文发表前，就已经有研究者在数学上证明了 ISTA 生成的序列 $\{\bm{x}_k\}$ 在某些关于算子 $\bm{A}$ 的病态条件下可能具有极慢并且任意差的渐进收敛速率。因此，如何加速 ISTA 的收敛速度成为了一个重要的研究方向。本文正是在此背景下，针对 $l_1$ 正则化线性逆问题，提出了一种快速迭代收缩阈值算法（FISTA），旨在显著提升收敛效率，同时适用于更一般的非光滑复合优化问题。
 
-\subsection{Contributions}
+\subsection{论文的贡献}
 
 本文的核心贡献是提出了一种名为 FISTA（Fast Iterative Shrinkage-Thresholding Algorithm） 的新算法，该算法在保持 ISTA 计算简单性的同时，显著提高了全局收敛速度，并从理论和实验两方面验证了其优越性。具体贡献包括以下几个方面：
 
 \begin{enumerate}
-    \item 理论层面：提出快速迭代收缩阈值算法（FISTA）并完成收敛性证明。\\
+    \item 理论层面：完成了 ISTA 算法的收敛性证明，提出快速迭代收缩阈值算法（FISTA）并完成收敛性证明。\\
         针对 ISTA 的慢收敛缺陷，本篇论文结合了 Nesterov 的加速思想与近端操作的适配性设计，构建了 FISTA 算法框架，还证明了 ISTA 的全局收敛速度为 $O(1/k)$，而 FISTA 则达到了 $O(1/k^2)$ 的全局收敛速率，显著优于 ISTA。这一改进是通过引入一个由历史迭代点精心构造的辅助更新点 $\bm{y}_k$ 实现的，该点由前两步迭代结果的线性组合生成，形式上为
         $$
         \bm{y}_{k+1} = \bm{x}_k + \frac{t_k}{t_{k+1}} (\bm{x}_k - \bm{x}_{k-1})
@@ -145,9 +145,9 @@ $$
         这篇论文通过在基于小波的图像去模糊问题上对比 ISTA、FISTA 以及当时最新的 TWIST 算法，实验表明 FISTA 在收敛速度上显著优于 ISTA，性能较 ISTA 提升数个数量级。在无噪声的简单测试图像恢复实验中，FISTA 仅用几百次迭代即可达到 ISTA 和 TWIST 需上万次迭代才能接近的精度。
 \end{enumerate}
 
-\subsection{Oganization}
+\subsection{论文组织}
 
-\textbf{论文组织：}
+\subsubsection{章节结构}
 
 \begin{itemize}
     \item 第一节：引言。\\
@@ -162,7 +162,7 @@ $$
         这一节通过一系列数值实验，特别是在图像去模糊任务上的应用，验证了 FISTA 的实际性能。实验结果显示，FISTA 在收敛速度和恢复质量上均优于 ISTA 和同期提出的 TWIST，证明了其在实际问题中的有效性。
 \end{itemize}
 
-\textbf{记号使用：}
+\subsubsection{记号使用}
 
 \begin{itemize}
     \item 两个向量 $\bm{x}, \bm{y} \in \mathbb{R}^n$ 的内积定义为 $\langle \bm{x}, \bm{y} \rangle = \bm{x}^T \bm{y}$。
@@ -214,72 +214,242 @@ $$
 %
 %-----------------------
 \section{方法描述}\label{section:methods}
-在本节中，算法可以表述如下算法~\ref{alg:thefirst}~所示。
 
-\begin{algorithm}[h]\xiaosi
-\caption{\xiaosi 计算 $y = x^n$}\label{alg:thefirst}
-\begin{algorithmic} 
-\REQUIRE $n \geq 0 \vee x \neq 0$
-\ENSURE $y = x^n$
-\STATE $y \leftarrow 1$
-\IF{$n < 0$}
-\STATE $X \leftarrow 1 / x$
-\STATE $N \leftarrow -n$
-\ELSE
-\STATE $X \leftarrow x$
-\STATE $N \leftarrow n$
-\ENDIF
-\WHILE{$N \neq 0$}
-\IF{$N$ is even}
-\STATE $X \leftarrow X \times X$
-\STATE $N \leftarrow N / 2$
-\ELSE[$N$ is odd]
-\STATE $y \leftarrow y \times X$
-\STATE $N \leftarrow N - 1$
-\ENDIF
-\ENDWHILE
+我们的目标是：
+
+\[\min_x \{ \|\bm{A}\bm{x} -\bm{b}\|^2 + \lambda \|\bm{x}\|_1 \}\]
+
+不妨令我们要求函数最小值：$F(\bm{x}) = \min_x \{ \|\bm{A}\bm{x} -\bm{b}\|^2 + \lambda \|\bm{x}\|_1 \}$
+
+拆开为 $f(\bm{x}) = \|\bm{A}\bm{x} -\bm{b}\|^2$ 和 $g(\bm{x}) = \lambda \|\bm{x}\|_1$
+
+\[Q_{L}(x, y):=f(y)+<x-y, \nabla f(y)>+\frac{L}{2}\| x-y\| ^{2}+g(x),\]
+
+
+\[p_{L}(y)=\underset{x}{argmin}\left\{g(x)+\frac{L}{2}\left\| x-\left(y-\frac{1}{L} \nabla f(y)\right)\right\| ^{2}\right\}\]
+
+
+\subsection{固定步长策略}
+
+已知 \( f \) 的梯度 Lipschitz 常数 \( L = L(f) \)，即满足
+
+\[\|\nabla f(x) - \nabla f(y)\| \leq L \|x - y\|, \quad \forall x, y.\]
+
+\begin{algorithm}[h]
+	\caption{FISTA with constant stepsize}
+	\label{alg:fista_const}
+	\begin{algorithmic}
+	\REQUIRE Lipschitz constant $L = L(f)$, initial point $x_0$
+	\ENSURE Sequence $\{x_k\}$ converging to solution of $\min f(x) + g(x)$
+	\STATE Set $y_1 \gets x_0$, $t_1 \gets 1$
+	\FOR{$k = 1, 2, \dots$}
+		\STATE Compute $x_k \gets \arg\min_x \left\{ g(x) + \frac{L}{2} \left\| x - \left( y_k - \frac{1}{L} \nabla f(y_k) \right) \right\|^2 \right\}$
+		\STATE Update $t_{k+1} \gets \frac{1 + \sqrt{1 + 4 t_k^2}}{2}$
+		\STATE Update $y_{k+1} \gets x_k + \frac{t_k - 1}{t_{k+1}} (x_k - x_{k-1})$
+	\ENDFOR
 \end{algorithmic}
 \end{algorithm}
 
-\lipsum[8]
 
-\lipsum[9]
+\subsection{自适应步长策略}
 
-\lipsum[10]
+当 \( L(f) \) 未知或难以计算时，采用自适应步长策略。从一个初始猜测 \( L_0 > 0 \) 开始，逐步增大步长（即减小实际步长 \( 1/L \)），直到满足下降条件：
+
+\[F(p_L(y_k)) \leq Q_L(p_L(y_k), y_k)\]
+
+
+\begin{algorithm}[h]
+	\caption{FISTA with backtracking}
+	\label{alg:fista_backtrack}
+	\begin{algorithmic}
+	\REQUIRE Initial point $x_0$, initial stepsize estimate $L_0 > 0$, $\eta > 1$
+	\ENSURE Sequence $\{x_k\}$ converging to solution
+	\STATE Set $y_1 \gets x_0$, $t_1 \gets 1$, $L \gets L_0$
+	\FOR{$k = 1, 2, \dots$}
+		\REPEAT
+			\STATE $L \gets \eta L$
+			\STATE $x_{\text{temp}} \gets \arg\min_x \left\{ g(x) + \frac{L}{2} \left\| x - \left( y_k - \frac{1}{L} \nabla f(y_k) \right) \right\|^2 \right\}$
+			\STATE Evaluate $Q \gets f(y_k) + \langle  x_{\text{temp}} - y_k ,\nabla f(y_k) \rangle + \frac{L}{2} \|x_{\text{temp}} - y_k\|^2 + g(x_{\text{temp}})$
+		\UNTIL{$f(x_{\text{temp}}) + g(x_{\text{temp}}) \leq Q$}
+		\STATE Set $x_k \gets x_{\text{temp}}$, $L_k \gets L$
+		\STATE Update $t_{k+1} \gets \frac{1 + \sqrt{1 + 4 t_k^2}}{2}$
+		\STATE Update $y_{k+1} \gets x_k + \frac{t_k - 1}{t_{k+1}} (x_k - x_{k-1})$
+	\ENDFOR
+\end{algorithmic}
+\end{algorithm}
+
 
 %-----------------------
 %
 %-----------------------
 
 \section{论文的实验结果}
-请描述清楚实验的基本设置，例如：用何种数据集？参数是如何设定的？实验结果数据的来源（是自己做的实验还是引自他人的结果，如果是他人完成的实验，要注明参考文献）。建议要有实验的基本分析。实验的图的例子可参考图\ref{figure_LR_curves}。
 
-\lipsum[25-26]
-\begin{figure}[ht]
-	\begin{subfigure}{.48\textwidth}
-		\centering
-		\includegraphics[width=\linewidth]{figs/CIFAR11_adv_regret}
-	\end{subfigure}
-	\hfill
-	\begin{subfigure}{.48\textwidth}
-		\centering
-		\includegraphics[width=\linewidth]{figs/CIFAR11_adv_time}
-	\end{subfigure}
-	\caption[在线多分类Logistic回归任务的实验结果]{
-		在线多分类Logistic回归任务的实验结果。
-		左边曲线图的横轴表示轮数，纵轴表示平均的损失函数值。
-		右边的柱状图展示了每个算法平均每轮的计算时间。
-	}
-	\label{figure_LR_curves}
+\subsection{实验设置与控制变量}
+
+\subsubsection{问题模型}
+
+所有实验都针对用 L1 正则化在小波域中对模糊图像进行去模糊。具体形式为优化问题 $\min_x F(x) = \|A \bm{x} - b\|^2 + \lambda \|x \|_1$。
+其中 $A = RW$，$R$ 是模糊算子矩阵，$W$ 是逆小波变换矩阵。$b$ 是已知的观测到的模糊图像。$\bm{x}$ 是我们要求解的小波域稀疏系数。$\lambda >0$ 控制正则化强度
+
+每张图片都被展开为一个一维的 $[0,1]^{h \times w}$ 向量，其中 $h$ 和 $w$ 分别是图像的高度和宽度，每个像素被归一化到 $[0,1]$ 区间。
+
+\subsubsection{算力}
+
+所有对比算法（ISTA, FISTA, MTWIST）在每一步迭代中的计算量都是相同的：一次 $A$ 和 $A^T$ 的矩阵-向量乘法，以及一次对小波系数的软阈值操作。
+
+\subsubsection{步长策略}
+
+所有方法均使用恒定步长，步长设置为 $\frac{1}{L(f)}$，其中$L(f)$是光滑项$f(x) = \|A \bm{x} - b \|^2$ 的梯度 Lipschitz 常数。
+
+
+\subsubsection{迭代起点}
+
+在所有实验中，算法的初始解 $\bm{x}_0$ 都被设为生成的模糊图像表示的向量。
+
+\subsubsection{边界条件}
+
+所有实验均假设反射（Neumann boundary conditions），在图像边界之外的像素值，通过对边界附近的已有像素进行镜像反射来定义。
+
+\subsubsection{评估指标}
+
+主要的量化评估指标是目标函数值 $F(\bm{x}_k)$，即 $\|A \bm{x}_k - b \|^2 + \lambda \|\bm{x}_k \|_1$ 在相同迭代次数 $k$ 之下越小越好。
+
+同时也通过相同迭代次数下恢复图像的清晰度进行定性评估。
+
+\subsection{Cameraman 图像去模糊}
+
+\subsubsection{测试数据}
+
+标准的 $256 \times 256$ “摄影师” 测试图像。
+
+
+使用 $9 \times 9$ 高斯模糊核，标准差为 $4$，使用 MATLAB 函数 imfilter 与 fspecial 实现。
+
+添加零均值、标准差为 $10^{-3}$ 的高斯白噪声。
+
+
+参数 $\lambda = 2e-5$。
+
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=\linewidth]{figs/test_data1}
+	\caption[Cameraman 图像去模糊的实验数据]{}
 \end{figure}
-\lipsum[27]
+
+
+\subsubsection{实验结果}
+
+ISTA、MTWIST 和 FISTA 在100次和200次迭代后的恢复图像及对应的目标函数值 $F_{100}$ 和 $F_{200}$。可以发现无论是目标函数大小还是肉眼观察定性分析，FISTA 都优于 ISTA 和 MTWIST。
+
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=\linewidth]{figs/test_res1}
+	\caption[Cameraman 图像去模糊的实验结果]{}
+\end{figure}
+
+
+\subsection{Simple Test Image 图像去模糊}
+
+\subsubsection{测试数据}
+
+一个 $256 \times 256$ 的简单测试图像（来自 Hansen 的正则化工具箱）。使用 $9 \times 9$ 高斯模糊核，标准差为 $4$，使用 MATLAB 函数 imfilter 与 fspecial 实现。添加零均值、标准差为 $10^{-3}$ 的高斯白噪声。
+
+参数 $\lambda = 1e-4$。
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=\linewidth]{figs/test_data2}
+	\caption[Simple Test Image 图像去模糊的实验数据]{}
+\end{figure}
+
+\subsubsection{实验结果}
+
+同样展示了 100次和 200次迭代后的结果。
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=\linewidth]{figs/test_res2}
+	\caption[Simple Test Image 图像去模糊的实验结果]{}
+\end{figure}
+
+
+文章还汇报了更多的实验结果：
+
+\begin{enumerate}
+\item FISTA 迭代 100 次后得到的目标函数值为 0.321，MTWIST 需要迭代 416 次才能达到 FISTA 迭代 100 次时的目标函数值
+
+\item 要达到 FISTA 迭代 200 次时的目标函数值 0.309，MTWIST 则需要迭代 1102 次。
+
+\item ISTA 的目标函数值停滞在 0.323 附近，而 MTWIST 的目标函数值则停滞在 0.318 附近。
+
+\end{enumerate}
+
+\subsection{无噪声情况下的收敛精度极限测试}
+
+
+为了在一个已知最优解的场景下，严格测试各算法能达到的最终收敛精度。
+
+\subsubsection{测试数据}
+
+使用一个 $64 \times 64$ 的全零图像作为原始图像。
+使用 $9 \times 9$ 高斯模糊核，标准差为 $4$，使用 MATLAB 函数 imfilter 与 fspecial 实现。
+不添加噪声。
+
+参数 $\lambda = 0$
+
+
+\subsubsection{实验结果}
+
+绘制了 10000次 迭代过程中，三种算法的误差 $\log(F(\bm{x}_k) - F(\bm{x}^*))$ 曲线。
+
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=\linewidth]{figs/test_res3}
+	\caption[简单案例下的收敛速度]{}
+\end{figure}
+
 
 %-----------------------
 %
 %-----------------------
 \section{论文的结论}
 
-\lipsum[16]
+\subsection{理论结果}
+
+\subsubsection{ISTA 的收敛性分析}
+
+${\bm{x}_{k}}$ 是固定步长或者带回溯准则的 ISTA 算法的迭代解，则有 $\forall k \geq 1$ 
+
+\[(3.5) F\left(x_{k}\right)-F\left(x^{*}\right) \leq \frac{\alpha L(f)\left\| x_{0}-x^{*}\right\| ^{2}}{2 k} \forall x^{*} \in X_{*},\]
+
+固定步长时 \(\alpha=1\) ，带回溯准则时 \(\alpha=\eta\) 。
+
+显然，因为 $e_k = F(\bm{x}_k) - F(\bm{x}^*) \leq \frac{C}{k}$ ，迭代收缩阈值算法（ISTA）的最坏情况复杂度为 $O(1/k)$。
+
+
+\subsubsection{FISTA 的收敛性分析}
+
+FISTA 算法的迭代解 \({x_{k}}\) , \({y_{k}}\) ，那么 \(\forall k \geq 1\) 
+
+\[F\left(\bm{x}_{k}\right)-F\left(\bm{x}^{*}\right) \leq \frac{2 \alpha L(f)\left\| \bm{x}_{0}-\bm{x}^{*}\right\| ^{2}}{(k+1)^{2}} \forall \bm{x}^{*} \in \bm{X}_{*},\]
+
+那么不难看出，$e_k = F(\bm{x}_k) - F(\bm{x}^*) \leq \frac{C}{k^2}$，改进版的迭代收缩阈值算法 FISTA，复杂度收敛至 $O(1/k^2)$。
+
+\subsection{实验结果}
+
+要达到指定精度，快速迭代收缩阈值算法（FISTA）所需的迭代次数远少于迭代收缩阈值算法（ISTA），性能优势显著。
+将快速迭代收缩阈值算法（FISTA）与单调版 TWIST 算法（MTWIST）对比，也可得出类似结论。
+
+
+同时，FISTA 算法收敛到的最佳精度远远高于 ISTA 算法和 MTWIST 算法。
+
+
+\section{附录}
+
 \begin{defn2}[规范数]\label{defn:theone}
 如果$x \in (0,1)$，则称$x$为规范数。
 \end{defn2}
@@ -305,20 +475,6 @@ $f(x)= ax + b$，其中$a>0$。
 $f(x)$是单调函数。
 \end{remark2}
 
-\lipsum[28-29]
-\subsection{收敛率相关理论结果}
-\lipsum[31]
-\subsubsection{光滑函数}
-\lipsum[32]
-\subsubsection{非光滑函数}
-\lipsum[33]
-
-\subsection{其他重要理论结果}
-\lipsum[36]
-\subsubsection{光滑函数}
-\lipsum[34]
-\subsubsection{非光滑函数}
-\lipsum[35]
 
 %-----------------------
 %
@@ -331,15 +487,6 @@ $f(x)$是单调函数。
 \section{围绕这篇论文可以开展哪些可行的研究}\label{section:application}
 阐述上述理论有哪些应用，可以列举使用了上述理论的论文、专利、软硬件产品等。
 
-\lipsum[16-24]
-
-%-----------------------
-%
-%-----------------------
-
-
-
-\lipsum[28]
 
 
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
